--- a/ShandrewPage/appsettings.json
+++ b/ShandrewPage/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "MongoDBConnection": "mongodb+srv://ShandrewVT:C3y7habY5Ysqq78@clustershan.tk63dew.mongodb.net/",
+    "DatabaseName": "shandrewvt"
+  }
 }
