Email-Contactme-SweetAlerts

--- a/ShandrewPage/appsettings.json
+++ b/ShandrewPage/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "Email": {
+    "Host": "smtp.gmail.com",
+    "Port": "587",
+    "Username": "lasandybot@gmail.com",
+    "Password": "jgjf dzmt kgfu cwcf"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
