cambio de cadena mongo

--- a/ShandrewPage/appsettings.json
+++ b/ShandrewPage/appsettings.json
@@ -14,7 +14,7 @@
 
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "MongoDBConnection": "mongodb+srv://ShandrewVT:C3y7habY5Ysqq78@clustershan.tk63dew.mongodb.net/",
+    "MongoDBConnection": "mongodb+srv://ShandrewVT:2hmQgiWZN8H6EsYv@clustershan.tk63dew.mongodb.net/",
     "DatabaseName": "shandrewvt"
   }
 }
