--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@
 *.user
 *.userosscache
 *.sln.docstates
+ShandrewPage/appsettings.json
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
 
